condor_ce: add grid_cert, backup and nologin for users

--- a/hieradata/roles/condor_ce.yaml
+++ b/hieradata/roles/condor_ce.yaml
@@ -1,8 +1,11 @@
 classes:
   - profile::firewalld
   - profile::cephfs
+  - profile::grid_cert
+  - 'profile::backed_up'
 
 site::node_info::users: poolaccounts
+profile::users::shell: '/sbin/nologin'
 
 firewalld::ports:
   "Open port 9618 for condor":
