fix: poolaccounts definition in condor_ce role

--- a/hieradata/roles/condor_ce.yaml
+++ b/hieradata/roles/condor_ce.yaml
@@ -4,7 +4,9 @@ classes:
   - profile::grid_cert
   - 'profile::backed_up'
 
-site::node_info::users: poolaccounts
+site::node_info:
+  users: poolaccounts
+
 profile::users::shell: '/sbin/nologin'
 
 firewalld::ports:
