--- a/hieradata/roles/condor_ce.yaml
+++ b/hieradata/roles/condor_ce.yaml
@@ -3,6 +3,7 @@ classes:
   - profile::cephfs
   - profile::grid_cert
   - 'profile::backed_up'
+  - profile::users::poolaccounts
 
 site::node_info:
   users: poolaccounts
