--- a/hieradata/roles/condor_manager.yaml
+++ b/hieradata/roles/condor_manager.yaml
@@ -5,6 +5,7 @@ classes:
   - profile::cephfs
   - packages::manage
   - profile::htcondor
+  - profile::users::poolaccounts
 
 profile::htcondor::role: "central-manager"
 
