HTCondor configuration for Computing elements and related roles (#23)
* fix user settings for condor-ce

* switch to kreczko-configure-CEs for UKI-PRIV

* condor_ce: pool_accounts -> poolaccounts

* condor_ce: add grid_cert, backup and nologin for users

* add LCG group

* enable user profile for lcgce*

* make dice_service_account a default for all nodes

* fix: poolaccounts definition in condor_ce role

* condor_ce: open port 9619

* add poolaccounts class

* add poolaccounts to workers, CEs, MDS and condor managers

* removed condor:condor from roles - now part of service accounts

* poolaccounts: set defaults for account creation

* Puppetfile: restore to master branch for private repo

--- a/hiera.yaml
+++ b/hiera.yaml
@@ -13,8 +13,9 @@ hierarchy:
       - "firewall/defaults.yaml"
       - "firewall/%{::node_info.firewall}.yaml"
       - "users/site_admins.yaml"
+      - "users/dice_service_accounts.yaml"
+      - "users/poolaccounts.yaml"
       - "users/%{::node_info.users}.yaml"
-      - "users/%{::node_info.service_accounts}.yaml"
       - "users/%{::node_info.admin_accounts}.yaml"
   - name: "Foreman hostgroups"
     mapped_paths: [sorted_path_array, tmp, "hostgroups/%{tmp}.yaml"]
