--- a/hieradata/roles/ceph_worker.yaml
+++ b/hieradata/roles/ceph_worker.yaml
@@ -8,6 +8,7 @@ classes:
   - profile::apptainer
   - profile::heposlibs
   - profile::nfs_mounts
+  - profile::users::poolaccounts
 
 profile::htcondor::role: "execute"
 
@@ -17,19 +18,6 @@ profile::monitored::use_prometheus: false
 profile::users::shell: '/sbin/nologin'
 
 cvmfs::cvmfs_cache_base: '/var/cache/cvmfs'
-
-profile::users::groups:
-  condor:
-    gid: '9618'
-
-profile::users::users:
-  condor:
-    uid: '9618'
-    gid: '9618'
-    home: '/var/lib/condor'
-    shell: '/sbin/nologin'
-    comment: 'condor superuser'
-    group: condor
 
 profile::cephfs::keys:
   - condor
