--- a/hieradata/roles/condor_gpu.yaml
+++ b/hieradata/roles/condor_gpu.yaml
@@ -8,6 +8,7 @@ classes:
   - profile::apptainer
   - profile::heposlibs
   - profile::nfs_mounts
+  - profile::users::poolaccounts
 
 profile::htcondor::role: "execute"
 profile::htcondor::execute::use_gpu: true
@@ -22,19 +23,6 @@ packages::install:
   - podman-docker
 
 cvmfs::cvmfs_cache_base: '/var/cache/cvmfs'
-
-profile::users::groups:
-  condor:
-    gid: '9618'
-
-profile::users::users:
-  condor:
-    uid: '9618'
-    gid: '9618'
-    home: '/var/lib/condor'
-    shell: '/sbin/nologin'
-    comment: 'condor superuser'
-    group: condor
 
 profile::cephfs::keys:
   - condor
